crates/rstest-bdd-harness-gpui/tests/fixtures_macros/scenario_harness_gpui_sync_rejected.stderr
error: combining `harness` with `async fn` scenarios is not supported; use a synchronous scenario function with `TokioHarness` instead (the harness provides the Tokio runtime for step functions)
  --> tests/fixtures_macros/scenario_harness_gpui_sync_rejected.rs:22:1
   |
22 | / #[scenario(
23 | |     path = "basic.feature",
24 | |     harness = rstest_bdd_harness_gpui::GpuiHarness,
25 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
